--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <script>
-        console.log("hello");
+
+        console.log("This is my text");
     </script>
 </body>
 </html>
