--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<script>
+	console.log("hello world");
+</script>
 <body>
-    <script>
-
-        console.log("This is my text");
-	console.log("This is new line");
-    </script>
 </body>
 </html>
