--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-
+	let str = "hello world";
         console.log("This is my text");
 	console.log("This is new line");
     </script>
